//
//  AccessibilityIDs.swift
//  ImageFeed
//
//  Created by Артем Табенский on 16.03.2025.
//

import Foundation

enum AccessibilityIDs {
    static let unsplashWebView = "UnsplashWebView"
    static let imageList = "ImageList"
    static let profilePicture = "ProfilePicture"
    static let userName = "UserName"
    static let userNickame = "UserNickname"
    static let userDescription = "UserDescription"
    static let exitButton = "ExitButton"
}
