...
        profilePicture.layer.cornerRadius = profilePicture.frame.width / 2
        profilePicture.clipsToBounds = true
    }
    
    @objc func exitButtonTapped() {
        let alert = UIAlertController(title: "Пока, пока!", message: "Уверены, что хотите выйти?", preferredStyle: .alert)
        let actionYes = UIAlertAction(title: "Да", style: .default) { _ in
            self.presenter?.logout()
        }
        let actionNo = UIAlertAction(title: "Нет", style: .cancel)
        alert.addAction(actionYes)
        alert.addAction(actionNo)
        present(alert, animated: true)
...
